<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        tools:context=".EncryptActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/image_stego"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/select_cover_image"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/ivCoverImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:baselineAlignBottom="false"
            android:text="@string/select_cover_image"
            android:src="@drawable/ic_file_upload"
            android:textAlignment="gravity"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/select_cover_image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/select_secret_image"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/ivSecretImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:src="@drawable/ic_file_upload"
            android:visibility="visible"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/select_secret_image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_message_key"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/etSecretKeyImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:ems="10"
            android:fontFamily="serif"
            android:gravity="start|top"
            android:hint="@string/type_your_secrete_key_here"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:overScrollMode="always"
            android:scrollbars="vertical"
            android:textColor="#000"
            android:textSize="20sp" />

<!--        <EditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:ems="10"-->
<!--            android:fontFamily="serif"-->
<!--            android:gravity="start|top"-->
<!--            android:hint="Type your secrete key here..."-->
<!--            android:layout_marginBottom="40dp"-->
<!--            android:inputType="textMultiLine"-->
<!--            android:isScrollContainer="true"-->
<!--            android:overScrollMode="always"-->
<!--            android:padding="16dp"-->
<!--            android:scrollbars="vertical"-->
<!--            android:textColor="#fff"-->
<!--            android:textSize="20sp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/textView2"-->
<!--            app:layout_constraintVertical_bias="0.0" />-->

        <Button
            android:id="@+id/bEncrypt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15dp"
            android:text="@string/encrypt" />

    </LinearLayout>

</ScrollView>