<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:id="@+id/activity_encrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:paddingBottom="5dp"
            android:text="@string/stego_image_title"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textIsSelectable="false"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivStegoImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="30dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/stego_image_title"
            android:paddingBottom="5dp"
            app:srcCompat="@drawable/ic_file_upload"
            tools:ignore="VectorDrawableCompat" />


        <Button
            android:id="@+id/bStegoSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:padding="5dp"
            android:text="@string/b_stego_image_save" />

        <Button
            android:id="@+id/bStegoShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/b_stego_image_share"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>
