<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/welcome_users"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/encode_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="40dp"
            android:backgroundTint="@color/cardview_shadow_start_color"
           >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:singleLine="false"
                    android:text="@string/text_in_image_stego"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:layout_gravity="center"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:background="@drawable/encrypted" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/encode_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            app:cardCornerRadius="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:singleLine="false"
                android:text="@string/image_in_image_stego"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_gravity="center"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:background="@drawable/secure" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/decode"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"

            android:backgroundTint="@color/cardview_shadow_start_color"
            app:cardCornerRadius="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:singleLine="false"
                android:text="@string/decode_stego"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_gravity="center"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:background="@drawable/decrypt" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</LinearLayout>
